# dutchfirecalc.nl

./: .eslintrc.js  .gitignore  Cargo.toml  LICENSE.txt  README.md  data.csv  deploy.sh  notebook.ipynb  package-lock.json  package.json
.github/workflows/: rust.yml
config/: nginx.conf  systemd.service
public/: data.csv  index.html  manifest.json  script.js  style.css
src/: App.js  Format.js  Format.test.js  Plot.css  Plot.js  Simulation.js  Table.js  Taxes.js  Taxes.test.js  Track.js  WithdrawalStrategies.js  data.csv.js  index.css  main.rs
src/simulator/: mod.rs  taxes.rs
src/web/: mod.rs
templates/: base.html.tera  index.html.tera  sim.html.tera
