[package]
name = "dutchfirecalc"
version = "0.1.0"
authors = ["Danny van Kooten <dannyvankooten@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
num-format = "0.4.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["tera_templates"]